corrected align-items: start; -> align-items: flex-start;

--- a/social-network-ui/src/components/Input/Input.module.scss
+++ b/social-network-ui/src/components/Input/Input.module.scss
@@ -127,7 +127,7 @@
     .dateOfBirth{
         display: flex;
         flex-direction: column;
-        align-items: start;
+        align-items: flex-start;
         font-size: 12px;
     }
 
@@ -135,7 +135,7 @@
         width: 185px;
         display: flex;
         flex-direction: column;
-        align-items: start;
+        align-items: flex-start;
         font-size: 12px;
         text-align: center;
     }
